# structures

./: .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY  LICENSE.rst  Pipfile  README.rst  pyproject.toml  setup.cfg  structures.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
examples/: redis.py  rpi_eeprom.py
structures/: __init__.py  core.py  test_bitfieldstruct.py
