[metadata]
name = structures
version = attr: structures.__version__
description = Declarative binary building and parsing: simple, fast and extensible
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = structures, declarative, data structure, binary, parser, builder, pack, unpack
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = True
py_modules = structures
