[metadata]
name = structures
version = attr: structures.__version__
description = Declarative binary building and parsing: simple, fast and extensible
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = structures, declarative, data structure, binary, parser, builder, pack, unpack
license = Apache 2.0
url = https://github.com/malinoff/structures
author = Dmitry Malinovsky (aka malinoff)
author_email = damalinov@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
python_requires = >=3.4

[options]
zip_safe = True
py_modules = structures

[bdist_wheel]
python-tag = py3
